objects/FeedItemsToDelete__c.object
<CustomObject>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <description>Hold Content Document Id related to Content Version, which are going to delete due to Feed Item.</description>
        <label>Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <description>Hold Content Version Id for Feed Item.</description>
        <label>Content Version Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_By__c</fullName>
        <label>Deleted By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedItemId__c</fullName>
        <description>ID of the feed to be deleted</description>
        <label>FeedItemId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>FeedItemsToDelete</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>FeedItemsToDelete Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FeedItemsToDelete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>